--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 <div class="main-frame-wrapper">
     <div class="header">
         <div class="icon">
-            icon
+            <img src="" alt="" srcset="resources/icons/love.svg">
         </div>
         <div class="share">
-            share
+            <img src="" alt="" srcset="resources/icons/share.svg">
         </div>
     </div>
     <div class="create-shortcut-wrapper">
@@ -62,7 +62,7 @@
     </div>
 </div>
 </body>
-<script src="scripts/jquery.js"></script>
+<script src="scripts/jquery.min.js"></script>
 <script src="popup.js"></script>
 
 </html>
