[Impl] KeyBoard Shortcuts Implemented

--- a/main.html
+++ b/main.html
@@ -18,9 +18,7 @@
     </div>
     <div class="create-shortcut-wrapper">
         <div class="input-fields">
-            <label>
                 <input id="create-input" type="text" placeholder="Enter a shortcut name">
-            </label>
             <label for="target">
                 <select name="option for page" id="target">
                     <option value="1">same tab </option>
@@ -30,19 +28,17 @@
             </label>
         </div>
         <div class="button-fields">
-            <button id="cancelButton">Cancel</button>
-            <button id="saveButton">Save</button>
+<!--            <button class="button" id="cancelButton">Cancel</button>-->
+            <button class="button" id="saveButton">Save</button>
         </div>
     </div>
     <div class="filter-wrapper">
         <div class="input-fields">
-            <label>
-                <input id="filterShortcuts" type="text" placeholder="Search shortcut">
-            </label>
+                <input class="inputs" id="filterShortcuts" type="text" placeholder="Search shortcut">
         </div>
     </div>
     <div class="suggest-wrapper">
-        <h4 class="title">Frequently Used Shortcuts. <spa>view</spa></h4>
+        <h4 class="title">Frequently Used Shortcuts. <span>view</span></h4>
         <div class="frq-shortcuts">
             <div>/Go</div>
             <div>/Go</div>
