[Impl] Layout and Ui changes

--- a/main.html
+++ b/main.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Slash Go</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/toastify.min.css">
 </head>
 <body>
 <div class="main-frame-wrapper">
     <div class="header">
         <div class="icon">
-            <img src="" alt="" srcset="resources/icons/love.svg">
+            <img src="" alt="" srcset="resources/icons/lightnig.svg">
         </div>
+        <div class="title">SLASH SPACE  GO</div>
         <div class="share">
             <img src="" alt="" srcset="resources/icons/share.svg">
         </div>
     </div>
     <div class="create-shortcut-wrapper">
         <div class="input-fields">
+                <span>/ SPACE</span>
                 <input id="create-input" type="text" placeholder="Enter a shortcut name">
             <label for="target">
                 <select name="option for page" id="target">
@@ -26,6 +29,7 @@
                     <option value="3">new window</option>
                 </select>
             </label>
+            <img class="help-icon shortcut" src="" alt="" srcset="resources/icons/Help.svg">
         </div>
         <div class="button-fields">
 <!--            <button class="button" id="cancelButton">Cancel</button>-->
@@ -38,7 +42,7 @@
         </div>
     </div>
     <div class="suggest-wrapper">
-        <h4 class="title">Frequently Used Shortcuts. <span>view</span></h4>
+        <h4 class="title">Frequently Used Shortcuts. <span class="view"><img src="resources/icons/view_list.svg" alt=""></span></h4>
         <div class="frq-shortcuts">
         </div>
     </div>
@@ -46,5 +50,9 @@
 </body>
 <script src="scripts/jquery.min.js"></script>
 <script src="popup.js"></script>
+<script src="scripts/popper.js"></script>
+<script src="scripts/tippy.js"></script>
+<script src="scripts/help.js"></script>
+<script type="text/javascript" src="scripts/toastify.js"></script>
 
 </html>
