[Fix] Class Rename

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                 <input class="inputs" id="filterShortcuts" type="text" placeholder="Search shortcut">
         </div>
     </div>
-    <div class="suggest-wrapper">
+    <div class="freq-suggest-wrapper">
         <h4 class="title">Frequently Used Shortcuts. <span class="view"><img src="resources/icons/view_list.svg" alt=""></span></h4>
         <div class="frq-shortcuts">
         </div>
