[Impl] Shortcut and Groups view switcher implemented

--- a/main.html
+++ b/main.html
@@ -36,6 +36,14 @@
             <button class="button" id="saveButton">Save</button>
         </div>
     </div>
+    <div class="view-title-wrapper">
+        <input type="radio" checked name="view-select" id="shortcuts" value="shorts" class="title">
+        <label for="shortcuts">Shortcuts</label>
+
+        <input type="radio" name="view-select" id="groups" value="group" class="title">
+        <label for="groups">Folders</label>
+
+    </div>
     <div class="filter-wrapper">
         <div class="input-fields">
                 <input class="inputs" id="filterShortcuts" type="text" placeholder="Search shortcut">
