[Impl] arrow key focus improved

--- a/main.html
+++ b/main.html
@@ -38,10 +38,10 @@
     </div>
     <div class="view-title-wrapper">
         <input type="radio" checked name="view-select" id="shortcuts" value="shorts" class="title">
-        <label for="shortcuts">Shortcuts</label>
+        <label tabindex="0" for="shortcuts">Shortcuts</label>
 
         <input type="radio" name="view-select" id="groups" value="group" class="title">
-        <label for="groups">Folders</label>
+        <label tabindex="0" for="groups">Folders</label>
 
     </div>
     <div class="filter-wrapper">
