[Impl] files moved into public folder for better development and build experience

--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 <div class="main-frame-wrapper">
     <div class="header">
         <div class="icon">
-            <img src="" alt="" srcset="resources/icons/lightnig.svg">
+            <img src="" alt="" srcset="public/resources/icons/lightnig.svg">
         </div>
         <div class="title">SLASH SPACE  GO</div>
         <div class="share">
-            <img src="" alt="" srcset="resources/icons/share.svg">
+            <img src="" alt="" srcset="public/resources/icons/share.svg">
         </div>
     </div>
     <div class="create-shortcut-wrapper">
@@ -29,7 +29,7 @@
                     <option value="3">new window</option>
                 </select>
             </label>
-            <img class="help-icon shortcut" src="" alt="" srcset="resources/icons/Help.svg">
+            <img class="help-icon shortcut" src="" alt="" srcset="public/resources/icons/Help.svg">
         </div>
         <div class="button-fields">
 <!--            <button class="button" id="cancelButton">Cancel</button>-->
@@ -50,13 +50,13 @@
         </div>
     </div>
     <div class="freq-suggest-wrapper">
-        <h4 class="title">Frequently Used Shortcuts. <span class="view"><img src="resources/icons/view_list.svg" alt=""></span></h4>
+        <h4 class="title">Frequently Used Shortcuts. <span class="view"><img src="public/resources/icons/view_list.svg" alt=""></span></h4>
         <div class="frq-shortcuts">
         </div>
     </div>
 
     <div class="group-wrapper">
-        <h4 class="title"> Groups <span><img src="resources/icons/view_list.svg" alt=""></span></h4>
+        <h4 class="title"> Groups <span><img src="public/resources/icons/view_list.svg" alt=""></span></h4>
         <div class="groups-list">
             <input type="radio" name="group-select" id="group" value="group" class="title">
             <label class="group" for="group">Group</label>
