--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/popup/main.jsx"></script>
+<script src="/src/popup/main.tsx" type="module"></script>
 </body>
 </html>
