--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="src/styles/tailwind_import.css" rel="stylesheet">
     <title>Vite + React + TS</title>
   </head>
   <body>
