--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/vite.svg" />
+    <link href="/icons/32_32.png" rel="icon" type="image/svg+xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/styles/tailwind_import.css" rel="stylesheet">
     <title>Vite + React</title>
