--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <link href="/icons/32_32.png" rel="icon" type="image/svg+xml"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="src/styles/tailwind_import.css" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="src/styles/tailwind_import.css" rel="stylesheet"/>
     <title>Vite + React</title>
 </head>
 <body>
